# emotionsgame_5

./: .gitignore  CLAUDE.md  Instructions_Chat_Prob.tex  NNbib.bib  NNstyle.sty  Paper.tex  README.md  instructions.tex  instructions_final.tex  main.tex  preregister.tex  pyproject.toml  reference.bib  settings.py
.github/workflows/: check-overleaf.yml  sync-overleaf.yml
_sandbox_data/: guilt_analysis.py  guilt_analysis_report.md  guilt_classifications.csv  guilt_hand_classifications.py
analysis/: behavior_helpers.py  behavior_helpers_df.py  classify_behavior.py  datastore  experiment_data.py
analysis/analysis/: analysis_plots.py  analysis_up8.py  classify_promises.py  contribution_analysis.R  dual_classifier.py  (+73 more)
finalresults/: survey.html
introduction/: instructions_x_quiz.html  practice_only.html
issues/: issue_38_merge_panel_data.md  issue_39_emotion_sentiment_analysis.md  issue_42_chat_embeddings.md
supergame1/: __init__.py
supergame2/: __init__.py
supergame3/: Results.html  ResultsOnly.html  __init__.py
supergame4/: __init__.py
supergame5/: EndMessage.html  ResultsOnly.html  StartPage.html  __init__.py
tables/: behavior_summary_aggregate.tex  contribution_regression.tex  contribution_regression_combined.tex  contributions_summary.tex  contributions_summary_aggregate.tex  dynamic_regression.tex  dynamic_regression_extended.tex  dynamic_regression_stata.tex  group_contribution_embedding_regression.tex  issue_72_lying_contagion.tex  liar_conditional_probability.tex  liar_diff_in_means.tex  treatment_contribution.tex
wiki/: _index.md  _sources.md
(+319 files in other folders)
