[project]
name = "emotionsgame"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "calebeynon", email = "ceynon@crimson.ua.edu" }
]
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "otree>=5.11.4",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "scipy>=1.16.2",
    "nltk>=3.9.1",
    "google-generativeai>=0.8.5",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0.post0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/emotionsgame"]

[tool.pytest.ini_options]
testpaths = ["analysis/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "slow: marks tests as slow (deselect with '-m not slow')",
]
